objects/vlocity_cmt__Application__c.object
<CustomObject>
    <description>Represents a submission of an application for products or services made by an individual, group of individuals or organization.</description>
    <fields>
        <fullName>vlocity_cmt__AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Address1__c</fullName>
        <description>Additional address information 1 of the address that is the topic of an Application (If no Premises is identified).</description>
        <label>Street Supplement 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Address2__c</fullName>
        <description>Additional street address information 2 of the address that is the topic of an Application (If no Premises is identified).</description>
        <label>Street Supplement 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ApplicationReferenceNumber__c</fullName>
        <label>Application Reference Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ApplicationTemplateId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application Template</label>
        <referenceTo>vlocity_cmt__ApplicationTemplate__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__City__c</fullName>
        <description>City of the address that is the topic of an Application (If no Premises is identified).</description>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Content__c</fullName>
        <label>Content</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Country__c</fullName>
        <description>Country of the address that is the topic of an Application (If no Premises is identified).</description>
        <label>Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__FilesMap__c</fullName>
        <label>Files Map</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Floor__c</fullName>
        <description>The floor in a building of the address that is the topic of an Application (If no Premises is identified).</description>
        <label>Floor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__FullJSON__c</fullName>
        <label>Full JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Geolocation__c</fullName>
        <description>Geolocation of the address that is the topic of an Application (If no Premises is identified).</description>
        <label>Geolocation</label>
        <scale>8</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__HouseNumberSupplement__c</fullName>
        <description>House number supplement of the address that is the topic of an Application (If no Premises is identified).</description>
        <label>House Number Supplement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__JSONData__c</fullName>
        <label>Data JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OmniScriptId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vlocity OmniScript</label>
        <referenceTo>vlocity_cmt__OmniScript__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OmniScriptLanguage__c</fullName>
        <formula>TEXT(vlocity_cmt__OmniScriptId__r.vlocity_cmt__Language__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OmniScriptLanguage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OpportunityId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PostalCode__c</fullName>
        <description>Postal code of the address that is the topic of an Application (If no Premises is identified).</description>
        <label>Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PremisesId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Premises that is the topic of an Application.</description>
        <label>Premises</label>
        <referenceTo>vlocity_cmt__Premises__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PrimaryPartyId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Applicant</label>
        <referenceTo>vlocity_cmt__Party__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Product2Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the product for which the prospect or customer is applying.</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__QuoteId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ScreeningResult__c</fullName>
        <label>Screening Result</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ServicePointId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Service Point that is the topic of an Application.</description>
        <label>Service Point</label>
        <referenceTo>vlocity_cmt__ServicePoint__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__State__c</fullName>
        <description>State or Province of the address that is the topic of an Application (If no Premises is identified).</description>
        <label>State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Manual Review</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StreetAddress__c</fullName>
        <description>Street address of the address that is the topic of an Application (If no Premises is identified).</description>
        <label>Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Summary__c</fullName>
        <description>Summary of the reason for screening failure.</description>
        <label>Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__UnitNumber__c</fullName>
        <description>Unit / Apartment number of the address that is the topic of an Application (If no Premises is identified).</description>
        <label>Unit / Apartment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Application</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <columns>NAME</columns>
        <columns>vlocity_cmt__Type__c</columns>
        <columns>vlocity_cmt__ApplicationReferenceNumber__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>